--- a/src/app/common/components/modals/RelatedFigures/RelatedFigureItemModal.styles.scss
+++ b/src/app/common/components/modals/RelatedFigures/RelatedFigureItemModal.styles.scss
@@ -15,7 +15,7 @@
         background-size: 100%;
         background-repeat: no-repeat;
     
-        @include mut.positioned-as();
+       //@include mut.positioned-as();
         @include mut.flexed($justify-content: center, $align-items: flex-end);
     
         @include vnd.vendored(transition, 'all .5s ease');
@@ -25,8 +25,6 @@
         @include mut.rounded($bottom-left: 30px, $bottom-right: 30px);
     
         background-color: c.$dark-red-color;
-    
-        @include vnd.vendored(transition, 'all .5s ease');
     
         .heading {
             @include mut.sized($width: 100%, $height: 88px);
@@ -47,6 +45,7 @@
     
                 @include mut.with-font($font-family: f.$closer-text-font, $font-weight: 500);
                 line-height: pxToRem(18.48px);
+                font-size: 14px;
                 text-align: center;
                 color: c.$pure-white-color;
             }
@@ -58,7 +57,7 @@
 
         //display: flex;
         //flex-direction: row;
-        @include mut.sized($width: 278px, $heigth: 46px);
+        @include mut.sized($width: 278px, $height: 46px);
         @include mut.flexed($justify-content: center, $align-items: center);
         @include mut.rem-margined($top: 360px); //maybe not good
         @include mut.rem-padded($top: 18px, $right: 26px, $bottom: 18px, $left: 26px);
@@ -70,6 +69,11 @@
         background: c.$dark-red-color;
         border: 2px solid c.$pure-white-color;
         box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.18);
+
+        p {
+            @include mut.with-font($font-family: f.$closer-text-font, $font-weight: 500);
+            line-height: pxToRem(16.41px);
+        }
     }
 
     .ant-modal-close {
@@ -81,7 +85,7 @@
           background-color: c.$modal-hover-color;
         }
         span.ant-modal-close-x{
-          max-height: f.pxToRem(28px);
+          max-height: pxToRem(28px);
         }
     }
 }
