--- a/src/app/common/components/modals/RelatedFigures/RelatedFigureItemModal.styles.scss
+++ b/src/app/common/components/modals/RelatedFigures/RelatedFigureItemModal.styles.scss
@@ -4,62 +4,72 @@
 @use "@sass/variables/_variables.fonts.scss" as f;
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
-.mobileModal {
+.ant-modal {
+    padding: 10vw !important;
+}
+
+.ant-modal-content {
     @include mut.sized($width: 278px, $height: 406px);
+    @include mut.rem-padded($top: 0, $left: 0);
+    @include mut.rem-margined($right: 0);
+    background: none !important;
+    border: none !important;
 
     .relatedFigureSlide {
         @include mut.sized($width: 278px, $height: 345px);
-        @include mut.full-rounded($rad: 30px);
         border: 3px solid c.$pure-white-color;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        background-size: 100%;
-        background-repeat: no-repeat;
-    
-       //@include mut.positioned-as();
-        @include mut.flexed($justify-content: center, $align-items: flex-end);
+        background-color: c.$pure-white-color;
+
+        display: block;
     
         @include vnd.vendored(transition, 'all .5s ease');
-        cursor: pointer;
-    
-        @include mut.sized($width: 278px, $height: 97px);
-        @include mut.rounded($bottom-left: 30px, $bottom-right: 30px);
-    
-        background-color: c.$dark-red-color;
-    
-        .heading {
-            @include mut.sized($width: 100%, $height: 88px);
-            
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            
-            .aliasText p {
-                @include mut.rem-padded($left: 5px, $right: 5px, $top: 5px, $bottom: 5px);
-                line-height: pxToRem(13.2px);
-                font-size: 10px;
-            }
-    
-            p {
-                @include mut.truncated($line-num: 2);
-                @include mut.rem-padded($left: 12px, $right: 12px, $top: 10px);
-    
-                @include mut.with-font($font-family: f.$closer-text-font, $font-weight: 500);
-                line-height: pxToRem(18.48px);
-                font-size: 14px;
-                text-align: center;
-                color: c.$pure-white-color;
+
+        .figureSlideImage {    
+            @include mut.sized($width: 272px, $height: 273px);
+            background-size: 100%;
+            background-repeat: no-repeat;
+        }
+
+        .figureSlideText {
+            @include mut.sized($width: 278px, $height: 69px);
+            @include mut.rounded($bottom-left: 29px, $bottom-right: 29px);
+        
+            background-color: c.$dark-red-color;
+        
+            .heading {
+                @include mut.sized($width: 100%, $height: 60px);
+                
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                
+                .aliasText {
+                    @include mut.rem-padded($left: 5px, $right: 5px, $top: 5px, $bottom: 5px);
+                    line-height: pxToRem(13.2px);
+                    font-size: 10px;
+                }
+        
+                p {
+                    @include mut.truncated($line-num: 2);
+                    @include mut.rem-padded($left: 12px, $right: 12px, $top: 10px);
+        
+                    @include mut.with-font($font-family: f.$closer-text-font, $font-weight: 500);
+                    line-height: pxToRem(18.48px);
+                    font-size: 14px;
+                    text-align: center;
+                    color: c.$pure-white-color;
+                }
             }
         }
     }
-    
+
     .redirectionButton {
         box-sizing: border-box;
 
-        //display: flex;
-        //flex-direction: row;
         @include mut.sized($width: 278px, $height: 46px);
         @include mut.flexed($justify-content: center, $align-items: center);
-        @include mut.rem-margined($top: 360px); //maybe not good
+        @include mut.rem-margined($top: 15px);
         @include mut.rem-padded($top: 18px, $right: 26px, $bottom: 18px, $left: 26px);
         gap: 15px;
 
@@ -73,19 +83,22 @@
         p {
             @include mut.with-font($font-family: f.$closer-text-font, $font-weight: 500);
             line-height: pxToRem(16.41px);
+            font-size: 14px;
+            text-align: center;
+            color: c.$pure-white-color;
         }
     }
 
     .ant-modal-close {
-        @include mut.positioned-as(absolute, $left: 93%, $top: -25px);
-        @include mut.circular(80px, c.$pure-white-color);
+        @include mut.positioned-as(absolute, $left: 93%, $top: -20px);
+        @include mut.circular(40px, c.$pure-white-color);
   
         display: inline;
         &:hover {
           background-color: c.$modal-hover-color;
         }
         span.ant-modal-close-x{
-          max-height: pxToRem(28px);
+          max-height: pxToRem(10px);
         }
     }
 }
