--- a/src/app/common/components/modals/RelatedFigures/RelatedFigureItemModal.styles.scss
+++ b/src/app/common/components/modals/RelatedFigures/RelatedFigureItemModal.styles.scss
@@ -5,21 +5,22 @@
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
 .ant-modal {
-    padding: 10vw !important;
+    padding: 10vw ;//!important;
 }
 
 .ant-modal-content {
     @include mut.sized($width: 278px, $height: 406px);
     @include mut.rem-padded($top: 0, $left: 0);
     @include mut.rem-margined($right: 0);
-    background: none !important;
+
+    background-color: rgba(0, 0, 0, 0.07) !important;
     border: none !important;
 
     .relatedFigureSlide {
         @include mut.sized($width: 278px, $height: 345px);
         border: 3px solid c.$pure-white-color;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        background-color: c.$pure-white-color;
+        background-color: c.$accented-gray-color;
 
         display: block;
     
@@ -38,21 +39,20 @@
             background-color: c.$dark-red-color;
         
             .heading {
-                @include mut.sized($width: 100%, $height: 60px);
+                @include mut.sized($width: 100%, $height: 69px);
                 
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 
                 .aliasText {
-                    @include mut.rem-padded($left: 5px, $right: 5px, $top: 5px, $bottom: 5px);
                     line-height: pxToRem(13.2px);
                     font-size: 10px;
                 }
         
                 p {
                     @include mut.truncated($line-num: 2);
-                    @include mut.rem-padded($left: 12px, $right: 12px, $top: 10px);
+                    @include mut.rem-padded($left: 0px, $right: 0px, $top: 0px);
         
                     @include mut.with-font($font-family: f.$closer-text-font, $font-weight: 500);
                     line-height: pxToRem(18.48px);
@@ -90,15 +90,19 @@
     }
 
     .ant-modal-close {
-        @include mut.positioned-as(absolute, $left: 93%, $top: -20px);
+        @include mut.positioned-as(absolute, $left: 88%, $top: -15px);
         @include mut.circular(40px, c.$pure-white-color);
+
+        filter: drop-shadow(0px 2.0241px 2.0241px rgba(0, 0, 0, 0.25));
   
         display: inline;
+
         &:hover {
-          background-color: c.$modal-hover-color;
+            background-color: c.$modal-hover-color;
         }
-        span.ant-modal-close-x{
-          max-height: pxToRem(10px);
+
+        .ant-modal-close-x {
+            padding: 11px !important;
         }
     }
 }
