add adapriviti for main card and audioplayer add partner block for new streetcode page

--- a/src/app/layout/app/App.styles.scss
+++ b/src/app/layout/app/App.styles.scss
@@ -2,7 +2,7 @@
 @use "@assets/sass/variables/_variables.colors.scss" as c;
 @use "@assets/sass/mixins/_utils.mixins.scss" as mut;
 @use "@assets/sass/mixins/_vendor.mixins.scss" as vnd;
-
+@use "@sass/_utils.functions.scss" as f;
 @import 'react-toastify/dist/ReactToastify.css';
 
 p,
@@ -29,3 +29,4 @@ div {
   @include vnd.vendored(transition, 'background .5s ease');
   z-index: 5;
 }
+
