--- a/src/app/common/components/modals/ListenText/ListenText.styles.scss
+++ b/src/app/common/components/modals/ListenText/ListenText.styles.scss
@@ -1,4 +1,4 @@
-@use "@assets/sass/_utils.functions.scss" as *;
+@use "@assets/sass/_utils.functions.scss" as f;
 @use "@assets/sass/variables/_variables.fonts.scss" as ft;
 @use "@assets/sass/variables/_variables.colors.scss" as c;
 @use "@assets/sass/mixins/_utils.mixins.scss" as mut;
@@ -38,4 +38,33 @@
 .closeModal {
     @include mut.positioned-as($position: absolute, $top: -20px, $right: -24px);
     cursor: pointer;
+}
+@media screen and (max-width: 1200px) {
+    .modal{
+        @include mut.sized(95%, 46px);
+
+      .audioPlayer {
+        @include mut.sizedImportant(100%, 30px);
+        @include mut.rem-padded(0px, 25px,0, 25px);
+        .progressBarWrapper{
+          width: 100%;
+        }
+        .progressBar{
+          width: 100%;
+        }
+        .buttonContainer {
+            @include mut.flex-centered();
+            margin-right: f.pxToRem(10px);
+          }
+      }
+    }
+  
+}
+@media screen and (max-width: 1024px){
+    .closeModal{
+        display:none;
+    }
+    .buttonContainer {
+        margin-right: f.pxToRem(5px);
+      }
 }
