--- a/src/features/AdminPage/PartnersPage/PartnerModal/PartnerModal.styles.scss
+++ b/src/features/AdminPage/PartnersPage/PartnerModal/PartnerModal.styles.scss
@@ -3,6 +3,10 @@
 @use "@sass/variables/_variables.colors.scss" as c;
 @use "@sass/_utils.functions.scss" as f;
 .partner-modal{
+    .form-input-line-group{
+        width: 100%;
+        @include mut.flexed(row, start,space-between, wrap, 4px);
+    }
     .partner-form{
         textarea{
             resize: none;
