--- a/src/features/StreetcodePage/TextBlock/TextBlock.styles.scss
+++ b/src/features/StreetcodePage/TextBlock/TextBlock.styles.scss
@@ -17,7 +17,13 @@
     @include mut.flex-centered();
 }
 .videoComponent{
-    margin-bottom: f.pxToRem(50px);
-    @include mut.full-rounded(50px);
+    margin-bottom: f.pxToRem(30px);
+    margin-right: f.pxToRem(5px);
+    margin-left: f.pxToRem(5px);
     overflow: hidden;
+}
+@media screen and (max-width: 1024px){
+    .videoComponent{
+        margin-bottom: f.pxToRem(20px);
+    }
 }
