--- a/src/features/StreetcodePage/MapBlock/CheckBox/CheckBox.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/CheckBox/CheckBox.styles.scss
@@ -16,7 +16,23 @@
   // border: 3px solid #787878;
   box-shadow: 0px 7px 11px 2px rgba(0, 0, 0, 0.25);
   border-radius: 23px;
-  
+  @media screen and (max-width: 480px) {
+    @include mut.sized(100%,76px);
+    top: 1px;
+    z-index: 3;
+    position:relative ;
+    box-shadow: none;
+    border-radius:none;
+ 
+  }
+  @media (min-width: 768px) and (max-width: 1024px) {
+    @include mut.sized(100%,76px);
+    top: 1px;
+    z-index: 3;
+    position:relative ;
+    box-shadow: none;
+    border-radius:none;
+  }
 }
 
 .selected-checkbox-text{
