--- a/src/features/StreetcodePage/MapBlock/Map/Map.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/Map/Map.styles.scss
@@ -5,6 +5,14 @@
     height: 100vh;
     width: 100vw;
     position: relative;
+    @media screen and (max-width: 480px) {
+      height: 360px;
+      width: 100vw;
+    }
+    @media (min-width: 768px) and (max-width: 1024px) {
+      height: 580px;
+      width: 100vw;
+    }
   }
   
 .mapCentered {
