--- a/src/features/StreetcodePage/MapBlock/Statistics/Info.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/Statistics/Info.styles.scss
@@ -12,7 +12,9 @@
     // border: 3px solid #787878;
     box-shadow: 0px 7px 11px 2px rgba(0, 0, 0, 0.25);
     border-radius: 23px;
-  
+    @media screen and (max-width: 1024px) {
+      display: none;
+    }
   }
   .infoButton {
   background-color: transparent;
