--- a/src/app/common/components/modals/RelatedFigures/RelatedFigureItemModal.styles.scss
+++ b/src/app/common/components/modals/RelatedFigures/RelatedFigureItemModal.styles.scss
@@ -5,7 +5,7 @@
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
 .ant-modal {
-    padding: 10vw ;//!important;
+    padding: 10vw ;
 }
 
 .ant-modal-content {
