currently removing RF mobile modal

--- a/src/app/common/components/modals/RelatedFigures/RelatedFigureItemModal.styles.scss
+++ b/src/app/common/components/modals/RelatedFigures/RelatedFigureItemModal.styles.scss
@@ -4,7 +4,7 @@
 @use "@sass/variables/_variables.fonts.scss" as f;
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
-.ant-modal {
+/*.ant-modal {
     padding: 10vw ;
 }
 
@@ -105,5 +105,5 @@
             padding: 11px !important;
         }
     }
-}
+}*/
 
