--- a/src/app/common/components/modals/Donates/DonatesModal.styles.scss
+++ b/src/app/common/components/modals/Donates/DonatesModal.styles.scss
@@ -46,10 +46,13 @@
     @include mut.with-font($font-weight: 300);
   }
   .enterSum{
-    display: block;
+    @include mut.rem-margined($top: 32px);
+    @include mut.with-font(ft.$closer-text-font, $font-size: 15px, $font-weight: 500);
+    line-height: 18px;
+    color: #A3A3A3;
   }
   > .amountInput {
-    @include mut.rem-margined($top: 23px, $bottom: 35px);
+    @include mut.rem-margined($bottom: 35px);
     @include mut.with-font(ft.$closer-text-font, $font-size: 64px, $font-weight: 500);
     text-align: center;
 
@@ -157,9 +160,9 @@
         @include mut.rem-margined($top: 10px, $bottom: 16px);
       }
       .enterSum{
+        @include mut.rem-margined($top: 0);
         @include mut.with-font(ft.$closer-text-font, $font-size: 10px, $font-weight: 500);
         line-height: 13px;
-        color: #A3A3A3;
       }
       .amountInput{
         @include mut.with-font(ft.$closer-text-font, $font-size: 32px, $font-weight: 500);
