Transliteration url fix

--- a/src/features/StreetcodePage/HeadingBlock/BlockHeading.styles.scss
+++ b/src/features/StreetcodePage/HeadingBlock/BlockHeading.styles.scss
@@ -5,6 +5,7 @@
 .blockHeadingWrapper {
     @include mut.sized(100%, 124px);
     @include mut.flex-centered();
+    margin-top: f.pxToRem(80px);
     margin-bottom: f.pxToRem(26px);
     // margin-left: f.pxToRem(139px);
 
