fixed header (animation & outline & paddings)

--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -35,3 +35,4 @@ $card-scrollbar-track-color: #DEDCDC !important;
 $modal-hover-color: #ECE9E9 !important;
 $burger-menu-color: #7F7F7F !important;
 $ant-menu-color: #E13F30 !important;
+$input-outline-color: #E6E4E4 !important;
