--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
@@ -75,7 +75,6 @@ $moreInfo-width: 150px;
 @media screen and (max-width: 480px) {
     .relatedFiguresWrapper {
         @include mut.sized($height: 600px); 
-        @include mut.rem-margined($bottom: 100px, $top: 150px);
 
         .slick-dots {
             bottom: 0;
@@ -86,7 +85,11 @@ $moreInfo-width: 150px;
         }
         .slick-slide {
             width: 165px !important;
+            &.slick-active {
+                width: 165px !important;
+            }
         }
+        
     }
 }
 @media screen and (max-width: 1024px) and (min-width: 481px) {
