--- a/src/features/StreetcodePage/HeadingBlock/BlockHeading.styles.scss
+++ b/src/features/StreetcodePage/HeadingBlock/BlockHeading.styles.scss
@@ -30,7 +30,7 @@
 @media screen and (max-width: 768px){
     .blockHeadingText{
         @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 32px);
-        margin-left: -35px;
+        margin-left: f.pxToRem(-35px);
     }
     .blockHeadingWrapper {
         margin-bottom: f.pxToRem(0px);
@@ -45,13 +45,11 @@
 @media screen and (max-width: 360px){
     .blockHeadingText{
         @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 32px);
-        margin-left: 0px;
-
+        margin-left: f.pxToRem(0px);
     }
     .blockHeadingContainer {
         margin-bottom: f.pxToRem(0px);
         svg {
-            //position: absolute;
             margin-left: f.pxToRem(-20px);
             display: block;
         }
