--- a/src/app/common/components/modals/RelatedFigures/RelatedFigureItemModal.styles.scss
+++ b/src/app/common/components/modals/RelatedFigures/RelatedFigureItemModal.styles.scss
@@ -7,10 +7,10 @@
 $modal-width: 278px;
 
 .ant-modal.mobileModal {
+    @include mut.sizedImportant($width: $modal-width, $height: 406px);
+
     .ant-modal-content {
-        @include mut.sized($width: $modal-width, $height: 406px);
         @include mut.rem-padded($top: 0, $left: 0);
-        margin: 0 calc((92vw - #{$modal-width}) / 2);
 
         background-color: rgba(0, 0, 0, 0.07) !important;
         border: none !important;
