--- a/src/app/common/components/modals/RelatedFigures/RelatedFigureItemModal.styles.scss
+++ b/src/app/common/components/modals/RelatedFigures/RelatedFigureItemModal.styles.scss
@@ -11,9 +11,8 @@ $modal-width: 278px;
 
     .ant-modal-content {
         @include mut.rem-padded($top: 0, $left: 0);
-
-        background-color: rgba(0, 0, 0, 0.07) !important;
-        border: none !important;
+        background-color: rgba(0, 0, 0, 0) !important;
+        box-shadow: none !important;
 
         .relatedFigureSlide {
             @include mut.sized($width: $modal-width, $height: 345px);
@@ -93,7 +92,7 @@ $modal-width: 278px;
             @include mut.circular(40px, c.$pure-white-color);
 
             filter: drop-shadow(0px 2.0241px 2.0241px rgba(0, 0, 0, 0.25));
-    
+            //z-index: 2011;
             display: inline;
 
             &:hover {
