--- a/src/features/AdditionalPages/PartnersPage/Partners.styles.scss
+++ b/src/features/AdditionalPages/PartnersPage/Partners.styles.scss
@@ -15,4 +15,10 @@
         width: 100%;
         margin: 0 auto;
     }
+
+    .subTitle{
+        @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 20px);
+        line-height: 26px;
+        color:  #1D1F23; 
+    }
 }
