--- a/src/features/StreetcodePage/Streetcode.styles.scss
+++ b/src/features/StreetcodePage/Streetcode.styles.scss
@@ -1,9 +1,10 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 @use "@sass/_utils.functions.scss" as f;
-
+$bgImg: '@assets/images/streetcode-card/background.png';
 .streetcodeContainer {
     width: 100%;
     overflow: hidden;
+    @include mut.bg-image($bgImg);
 }
 
 .dimmed {
