--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -7,6 +7,7 @@ $transparent-color: transparent !important;
 $accented-gray-color: #F4F4F4 !important;
 $text-light-gray-color: #D7D7D7 !important;
 $lighter-gray-color: #D3CDCA !important;
+$milky-white-color: #DDDDDD !important;
 $darker-gray-color: #5D5D5D !important;
 $dark-gray-color: #4D4D4D !important;
 $darkish-gray-color: #A3A3A3 !important;
