--- a/src/features/StreetcodeCatalogPage/StreetcodeCatalog.styles.scss
+++ b/src/features/StreetcodeCatalogPage/StreetcodeCatalog.styles.scss
@@ -1,26 +1,34 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
-@use "@sass/_utils.functions.scss" as f;
+@use "@sass/variables/_variables.colors.scss" as c;
+@use "@sass/_utils.functions.scss" as *;
+@use "@sass/mixins/_vendor.mixins.scss" as vnd;
+@use "@sass/variables/_variables.fonts.scss" as f;
+
 
 $bgImg: '@assets/images/streetcode-card/background.png';
 
 .streetcodeCatalogWrapper{
-    padding: 100px 10%;
+    padding: pxToRem(100px) 10%;
     @include mut.bg-image($bgImg);
     .streetcodeCatalogHeading{
         font-family: 'Closer Text';
         font-style: normal;
         font-weight: 500;
         font-size: 96px;
-        line-height: 127px;
+        line-height: pxToRem(127px);
         display: flex;
         align-items: center;
-        color: #DDDDDD;
+        color: c.$milky-white-color;
     }
     .steetcodeCatalogContainer{
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-auto-rows: minmax(165px, 380px);
-        column-gap: 28px;
-        row-gap: 60px;
+        column-gap: pxToRem(28px);
+        row-gap: pxToRem(60px);
+    }
+
+    @media screen and (max-width: 1024px) {
+        
     }
 }
