--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
@@ -72,39 +72,54 @@
 }
 // FIX ME !
 @media screen
-   and (max-width: 768px){
-  //  and (max-width: 1024px){
+and (max-width: 768px){
 
-    .interestingFactsSliderContainer .slick-list {
-      @include mut.rem-padded(120px);
-    }
- .interestingFactSlide {
-   @include mut.sized(233px, 275px);//250px
-   @include mut.full-rounded(20px);
+  .interestingFactsSliderContainer .slick-list {  
+    @include mut.rem-padded(120px);
+  }
+  .interestingFactsSliderContainer .sliderClass {
+    height: 110%;
+  }
+  .interestingFactsSliderContainer .slick-dots {
+    margin-bottom: 200px;
+  }
+  
+  .interestingFactSlide {
+      
+    //  @include mut.sized(233px, 275px);//250px
+    // @include mut.sized(90%, 260px);//250px
+    @include mut.sized(88%); //80
 
+    @include mut.full-rounded(20px);
+    
      .slideImage {
-       @include mut.sized(100%, 145px);//200px
+      //  @include mut.sized(100%, 160px);//200px
+       @include mut.sized(100%, 135px);//200px
        @include mut.rounded(20px, 20px);
       img{
         @include mut.sized(100%, 100%)
       }
      }
      .slideText {
-       @include mut.sized(100%, 144px);
+       @include mut.sized(100%, 140px);
+      // @include mut.sized(100%, 165px);
       //  @include mut.rem-padded(1px, 2px, 5px, 0px);
       // @include mut.rem-margined(1px, 16px, 24px, 16px);
 
        .heading {
-        @include mut.rem-padded(5px, 20px, 4px, 16px);
-         @include mut.with-font($font-weight: 500, $font-size: 13px);
-         line-height: f.pxToEm(15px);
+        @include mut.rem-padded(6px, 20px, 4px, 15px);
+         @include mut.with-font($font-weight: 500, $font-size: 14px);
+         line-height: f.pxToEm(17px);
        }
        .mainText {
         //  @include mut.rem-padded(0, 20px, 0px, 20px);
-        @include mut.rem-padded(1px, 20px, 0px, 16px);
+        @include mut.rem-padded(1px, 12px, 0px, 15px);
+        max-width: 316px;
+        max-height: 144px;
 
-         @include mut.with-font($font-weight: 300, $font-size: 11px);
-         line-height: f.pxToEm(15px);
+         @include mut.with-font($font-weight: 300, $font-size: 12px);
+        //  line-height: f.pxToEm(18px);
+         line-height: f.pxToEm(14px);
 
        }
      } 
@@ -112,9 +127,9 @@
 
      .readMoreParagraph {
       //  @include mut.rem-padded(10px, 20px, 0px, 20px);
-      @include mut.rem-padded(5px, 20px, 0px, 16px);
+      @include mut.rem-padded(5px, 20px, 0px, 15px);
 
-      @include mut.with-font(ft.$roboto-font, 300, 10px, normal);        
+      @include mut.with-font(ft.$roboto-font, 300, 12px, normal);        
      }
   } 
  }
@@ -168,24 +183,31 @@
  
 @media screen and (max-width: 480px) { 
 
+  
   .interestingFactSlide {
-    @include mut.sized(290px, 312px);
+    // @include mut.sized(290px, 312px);
+    @include mut.sized(85%);
     @include mut.full-rounded(20px);
 
       .slideImage {
-        @include mut.sized(100%, 188px);
+        // @include mut.sized(100%, 188px);
+        @include mut.sized(100%, 165px);
         @include mut.rounded(20px, 20px);
 
       }
       .slideText {
-        @include mut.sized(100%, 125px);
+        @include mut.sized(100%, 155px);
         .heading {
-          @include mut.with-font($font-weight: 500, $font-size: 12px);
+          @include mut.with-font($font-weight: 500, $font-size: 14px);
           line-height: f.pxToEm(15px);
         }
         .mainText {
-          @include mut.with-font($font-weight: 300, $font-size: 10px);
-          line-height: f.pxToEm(20px);
+          
+          @include mut.with-font($font-weight: 300, $font-size: 12px);
+          @include mut.full-rounded(0px);
+          // line-height: f.pxToEm(21px);
+          line-height: f.pxToEm(18px);
+
           // &::-webkit-scrollbar-thumb,
           // &::-webkit-scrollbar-track {
           //   @include mut.full-rounded(15px);
@@ -203,8 +225,8 @@
       } 
 
       .readMoreParagraph {
-        @include mut.rem-padded(4px, 20px, 0px, 20px);
-        @include mut.with-font(ft.$roboto-font, 300, 10px, normal);        
+        // @include mut.rem-padded(4px, 20px, 0px, 20px);
+        @include mut.with-font(ft.$roboto-font, 300, 12px, normal);        
       }
   }
  }
