--- a/src/features/AdditionalPages/PartnersPage/Partners.styles.scss
+++ b/src/features/AdditionalPages/PartnersPage/Partners.styles.scss
@@ -5,11 +5,13 @@
 .partnersContainer{
     position: relative;
     top: f.pxToRem(82px);
-    background: #fffcfc;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     padding: f.pxToRem(30px) f.pxToRem(10px) f.pxToRem(10px) f.pxToRem(10px);
-    
+
+    @include mut.bg-image('../../../assets/images/partners/background.png');
+    background-attachment: fixed;
+
     .wrapper{
         max-width: f.pxToRem(1200px);
         width: 100%;
@@ -20,5 +22,13 @@
         @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 20px);
         line-height: 26px;
         color:  #1D1F23; 
+    }
+
+    .subTitle.titleBottom{
+        white-space: nowrap;
+        margin-bottom: f.pxToRem(30px);
+    }
+    .buttonsBlock{
+        @include mut.flexed($justify-content: center, $gap: 20px);
     }
 }
