fix backround and main card  margin in adaptive phone

--- a/src/assets/sass/mixins/_utils.mixins.scss
+++ b/src/assets/sass/mixins/_utils.mixins.scss
@@ -163,9 +163,9 @@
   visibility: visible !important;
 }
 
-@mixin bg-image($file-path, $bg-size: cover) {
+@mixin bg-image($file-path, $bg-size: cover, $bg-repeat: no-repeat) {
   background-image: url($file-path);
-  background-repeat: no-repeat;
+  background-repeat: $bg-repeat;
   background-size: $bg-size;
 }
 
