--- a/src/features/StreetcodePage/Streetcode.styles.scss
+++ b/src/features/StreetcodePage/Streetcode.styles.scss
@@ -4,7 +4,7 @@ $bgImg: '@assets/images/streetcode-card/background.png';
 .streetcodeContainer {
     width: 100%;
     overflow: hidden;
-    @include mut.bg-image($bgImg);
+    @include mut.bg-image($bgImg, auto);
 }
 
 .dimmed {
@@ -14,4 +14,10 @@ $bgImg: '@assets/images/streetcode-card/background.png';
 .stickies{
     @include mut.positioned-as(absolute, $bottom: 290px, $right: 42px);
     margin-bottom: f.pxToRem(8px);
+}
+@media screen and (max-width: 680px) {
+    .streetcodeContainer{
+        background-image: none;
+    }
+    
 }
